# Shark

./: .gitignore  .travis.yml  CMakeDoxygenDefaults.cmake  CMakeLists.txt  CNAME  COPYING.txt  CTestConfig.cmake  INSTALL.txt  README.txt  Release-Notes-tgz.txt  SharkConfig.Libs  SharkConfig.cmake.in  SharkConfigVersion.cmake.in  UseShark.cmake  appveyor.yml  assignment.hpp  cBlasCheck.cpp  decompositions.hpp  dense.hpp  expression_types.hpp  frontpage.css  index.html  installAdmin  installShark  io.hpp  makeastyle  makehomepage  makerights  matrix.hpp  matrix_expression.hpp  matrix_proxy.hpp  matrix_sparse.hpp  params.json  patch.txt  permutation.hpp  proxy_expressions.hpp  random.hpp  remora.hpp  solve.hpp  sparse.hpp  (+6 more)
Test/: CMakeLists.txt  Utils.h
Test/Algorithms/: ApproximateKernelExpansion.cpp  GridSearch.cpp  Hypervolume.cpp  JaakkolaHeuristic.cpp  KMeans.cpp  nearestneighbors.cpp  testFunction.h
Test/Core/: Convolution.cpp  Iterators.cpp  LoadImage.cpp  Math.cpp  ReadImage.cpp  Reorder.cpp  Resize.cpp  ScopedHandleTests.cpp  WriteImage.cpp  ZipSupport.cpp
Test/Data/: Bootstrap.cpp  CVDatasetTools.cpp  Csv.cpp  DataView.cpp  Dataset.cpp  Download.cpp  ExportKernelMatrix.cpp  Generators.cpp  HDF5Tests.cpp  LabelOrder_Test.cpp  Libsvm.cpp  PrecomputedMatrix.cpp  SparseData.cpp  Statistics.cpp
Test/EALib/: SchwefelEllipsoidCMA.cpp  SchwefelEllipsoidCMSA.cpp  SchwefelEllipsoidElitistCMA.cpp  paraboloidCMA.cpp  paraboloidCMSA.cpp  paraboloidElitistCMA.cpp
Test/Fuzzy/: FuzzySets.cpp  LinguisticTerms.cpp
Test/LinAlg/: DiagonalMatrix.cpp  Initialize.cpp  KernelMatrix.cpp  LRUCache.cpp  Metrics.cpp  PartlyPrecomputedMatrix.cpp  Proxy.cpp  RQ.cpp  VectorTransformations.cpp  choleskyDecomposition.cpp  covar_corrcoef.cpp  dlmin.cpp  eigen.cpp  eigensymm.cpp  eigensymmJacobi2.cpp  fast_prod.cpp  fft.cpp  g_inverse.cpp  linmin.cpp  lnrsrch.cpp  permute.cpp  repeat.cpp  rotations.cpp  solve.cpp  sumRows.cpp  svd.cpp
Test/Models/: Autoencoder.cpp  CARTClassifier.cpp  CMAC.cpp  ConcatenatedModel.cpp  ConvexCombination.cpp  ConvolutionalModel.cpp  DropoutLayer.cpp  Ensemble.cpp  FFNet.cpp  LinearModel.cpp  LinearNorm.cpp  MeanModel.cpp  NBClassifierTests.cpp  NearestNeighborModel.cpp  NearestNeighborRegression.cpp  NeuronLayer.cpp  OneVersusOneClassifier.cpp  OnlineRNNet.cpp  PoolingLayer.cpp  RBFLayer.cpp  RBFNet.cpp  RFClassifier.cpp  RNNet.cpp  ResizeLayer.cpp  SigmoidModel.cpp  SoftNearestNeighborClassifier.cpp  Softmax.cpp  TiedAutoencoder.cpp  derivativeTestHelper.h
Test/Network/: HttpClient.cpp  HttpServer.cpp
Test/ObjectiveFunctions/: AUC.cpp  AbsoluteLoss.cpp  Benchmarks.cpp  BoxConstraintHandler.cpp  CrossEntropy.cpp  CrossValidation.cpp  DenoisingAutoencoderError.cpp  EpsilonHingeLoss.cpp  ErrorFunction.cpp  HingeLoss.cpp  HuberLoss.cpp  KernelBasisDistance.cpp  KernelTargetAlignment.cpp  LooError.cpp  LooErrorCSvm.cpp  NegativeClassificationLogLikelihood.cpp  NegativeGaussianProcessEvidence.cpp  NegativeLogLikelihood.cpp  NoisyErrorFunction.cpp  RadiusMarginQuotient.cpp  SparseAutoencoderError.cpp  SparseFFNetError.cpp  SquaredEpsilonHingeLoss.cpp  SquaredHingeLoss.cpp  SquaredLoss.cpp  SvmLogisticInterpretation.cpp  TestLoss.h  TestObjectiveFunction.h  TukeyBiweightLoss.cpp  VariationalAutoencoder.cpp
Test/OpenML/: OpenML.cpp
Test/RBM/: Analytics.cpp  AverageEnergyGradient.cpp  BinaryLayer.cpp  BipolarLayer.cpp  ContrastiveDivergence.cpp  ContrastiveDivergenceTraining.cpp  ConvolutionalCDTraining.cpp  ConvolutionalEnergyGradient.cpp  ConvolutionalPTTraining.cpp  ConvolutionalRBMBasic.cpp  Energy.cpp  ExactGradient.cpp  ExactGradientTraining.cpp  GaussianLayer.cpp  GibbsOperator.cpp  MarkovChain.cpp  PCDTraining.cpp  ParallelTemperingTraining.cpp  TemperedMarkovChain.cpp  TruncatedExponentialLayer.cpp
Test/Rng/: MultiNomial.cpp  MultiVariateNormal.cpp  Rng.cpp
Test/Statistics/: Tests.cpp
Test/test_data/: testImage.pgm
doc/: CMakeDoxygenDefaults.cmake  CMakeLists.txt  DoxygenLayout.xml  FAQ.html  GettingStarted.html  LinkChecker.cpp  ReClaM_MigrationGuide.html  Shark.dox.in  SharkDoc.cfg  Tutorials.html  frontpage.css  header_template.txt  index.html  template-head  template-main
doc/Array/: Doxyfile
doc/EALibManual/: EALib.tex  cmascheme.eps  cross1.eps  datastruct.tex  evoalg.tex  genom.eps  manual.bib  mutation.tex
doc/Fuzzy/: Doxyfile
doc/LinAlg/: Doxyfile
doc/Tutorials/: tutorial.js
doc/TutorialsOld/: index.html
doc/css/: main.css
doc/data/: quickstart-train.csv
doc/sphinx_pages/: conf.py.in  index.rst  index.tut  mlstyle.js.in
doc/tools/: Makefile  correctTestSuiteNames.py  removeFileTag.py  replaceHeaders.py  tut2rst.cpp
doc/tutToRst/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  tut2rst.cpp
examples/: CMakeLists.txt
examples/Data/: Datasets.tpp  Import.tpp  Normalization.tpp  Subsets.tpp
examples/EALib/: ackleyES.cpp  integerES.cpp  paraboloidCMA.cpp  sphereGA.cpp
examples/ExampleProject/: CMakeLists.txt  HelloWorld.cpp
examples/FileUtil/: FileUtil-Examples.SharkConfig  FileUtilClass.cpp
examples/LinAlg/: cblnsrch_test.cpp  covar_corrcoef_test.cpp  detsymm_test.cpp  eigensymmJacobi2_test.cpp  eigensymm_test.cpp  fft_test.cpp  linalg_simple_test.cpp  linmin_test.cpp  rank_decomp_test.cpp  rank_test.cpp  svd_test.cpp  svdrank_test.cpp
examples/MOO-EALib/: HypervolumeBenchmark.cpp  NSGA2.conf  PAES.cpp  VEGA-SCAT.cpp  VEGA.conf
examples/OpenML/: OpenMLTutorial.cpp  OpenMLTutorial.tpp
examples/ReClaM/: CrossValidation.cpp  KNN.cpp  KernelOptimization.cpp  LinearClassifierTest.cpp  LinearRegressionTest.cpp  McSvmApproximationExample.cpp  PCAtest.cpp  SVMclassification-gnuplot.cpp  SVMclassification.cpp  SVMregression-gnuplot.cpp  SVMregression.cpp  iris.data  simpleMSERNNet.cpp  simpleRBFNet.cpp  whitening.cpp
examples/Rng/: RngTestSimple.cpp
examples/Statistics/: RandomNumbers.tpp  Statistics.tpp
examples/Supervised/: CARTTutorial.cpp  CARTTutorial.tpp  CSvmLinear.cpp  (+55 more)
include/: CMakeLists.txt  SharkDefs.h
src/: CMakeLists.txt  Rng.cpp  Shark-Library.SharkConfig  Version.cpp
(+9793 files in other folders)
